--- a/DJeNagarNigam/templates/mainapp/forum.html
+++ b/DJeNagarNigam/templates/mainapp/forum.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static %} {% block title %}Dashboard{% endblock %}
+{% load static %} {% block title %}Forum{% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
 <link rel="stylesheet" href="{% static 'css/homestyle.css' %}">
