--- a/DJeNagarNigam/templates/base.html
+++ b/DJeNagarNigam/templates/base.html
@@ -19,26 +19,17 @@
             <p style="border: 3px white; border-style: double; padding: 0.5em; border-radius: 30px;">ADMIN : {{ user.username }}</p>
         </div>
         <ul id="nav-list">
-            <li class="list-item" style="text-align: center;"><a href="{% url 'home' %}">Dashboard</a></li>
-            <li class="list-item" style="text-align: center;"><a href="{% url 'sr' %}">Service Requests</a></li>
-            <li class="list-item" style="text-align: center;"><a href="{% url 'report' %}">Reports</a></li>
-            <li class="list-item" style="text-align: center;"><a href="{% url 'map' %}">Map</a></li>
-            <li class="list-item" style="text-align: center;"><a href="{% url 'forum' %}">Forum</a></li>
+            <li class="list-item" style="text-align: center;"><a href="{% url 'home' %}" class="nv">Dashboard</a></li>
+            <li class="list-item" style="text-align: center;"><a href="{% url 'sr' %}" class="nv">Service Requests</a></li>
+            <li class="list-item" style="text-align: center;"><a href="{% url 'report' %}" class="nv">Reports</a></li>
+            <li class="list-item" style="text-align: center;"><a href="{% url 'map' %}" class="nv">Map</a></li>
+            <li class="list-item" style="text-align: center;"><a href="{% url 'forum' %}" class="nv">Forum</a></li>
         </ul>
     </nav>
     <main>
         {% block content %} {% endblock %}
     </main>
 
-    <script>
-        var x = document.getElementsByClassName('list-item');
-        Array.from(x).forEach(element => {
-            element.onclick = () => {
-                document.getElementById('selected').id = '';
-                element.id = 'selected';
-        }
-        });
-    </script>
 </body>
 
 </html>
