--- a/DJeNagarNigam/templates/registration/login.html
+++ b/DJeNagarNigam/templates/registration/login.html
@@ -10,11 +10,22 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
   <link rel="stylesheet" href="{% static 'bootstrap/hover.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/text.css' %}">
 </head>
 
 <body>
-
-
+  <div>
+    <h1 class="ml14" style="text-align: center; padding:1em;">
+      <span class="text-wrapper">
+        <span class="letters">ENagarNigam Admin Panel</span>
+        <span class="line"></span>
+      </span>
+    </h1>
+  </div>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  
+  <script src="{% static 'js/text.js' %}"></script>
 
   <div class="row">
     <div class=" col-md-6 col-xl-4 col-lg-4 align-self-center" style=" background-color:#2c3e50;
