--- a/DJeNagarNigam/templates/registration/login.html
+++ b/DJeNagarNigam/templates/registration/login.html
@@ -5,12 +5,12 @@
 <head>
   <meta charset="utf-8">
   <title>Login</title>
-  <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'mainapp/bootstrap/bootstrap.min.css' %}" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
-  <link rel="stylesheet" href="{% static 'bootstrap/hover.css' %}" />
-  <link rel="stylesheet" href="{% static 'css/text.css' %}">
+  <link rel="stylesheet" href="{% static 'mainapp/bootstrap/hover.css' %}" />
+  <link rel="stylesheet" href="{% static 'mainapp/css/text.css' %}">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   
-  <script src="{% static 'js/text.js' %}"></script>
+  <script src="{% static 'mainapp/js/text.js' %}"></script>
 
   <div class="row">
     <div class=" col-md-6 col-xl-4 col-lg-4 align-self-center" style=" background-color:#2c3e50;
